Hoàng Nhi - Gửi tin nhắn với tập tin
- New features
+ Tải File lên hiên thị Preview ở input
+ Gửi file cùng với tin nhắn
+ Hiển thị Preview cho từng loại file: hình ảnh, video(mp4) và các file khác
+ Sử dụng SignalR để Append tin nhắn khi gửi
+ Áp dụng cho Group
+ ShowLightBox cho các file ảnh

--- a/FE/Views/Home/Contact/GroupRequest/_GroupRequestGetListPagingPartial.cshtml
+++ b/FE/Views/Home/Contact/GroupRequest/_GroupRequestGetListPagingPartial.cshtml
@@ -95,7 +95,7 @@
                          style="box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
                                 object-fit: cover"
                          data-mdb-popover-init
-                         data-mdb-content="@($"<div class='text-black px-2 py-1' style='font-weight: 500'>{sender.HoVaTen}</div>")"
+                         data-mdb-content="@($"<div class='text-black px-2 py-1 bg-white' style='font-weight: 500'>{sender.HoVaTen}</div>")"
                          data-mdb-trigger="hover"
                          data-mdb-html="true"
                          data-mdb-placement="top" />
