--- a/FE/Views/Shared/ConfigProfile/_ConfigProfilePopoverPartial.cshtml
+++ b/FE/Views/Shared/ConfigProfile/_ConfigProfilePopoverPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="d-flex flex-column align-items-start py-2 px-1" style="width: 274px">
+﻿<div class="d-flex flex-column align-items-start py-2 px-1 bg-white" style="width: 274px">
     <button type="button"
             onclick="BtnPopover.toggle();showInforModal()"
             class="btn btn-link w-100 text-start text-black p-3"
