--- a/FE/wwwroot/css/site.css
+++ b/FE/wwwroot/css/site.css
@@ -200,7 +200,9 @@ body {
 
 .popover {
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-    color: black
+    color: black;
+    background-color: unset;
+    overflow: hidden
 }
 
 div{
@@ -361,4 +363,9 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .new-message-indicator.hiding {
     animation: fadeOut 0.3s ease-out forwards;
+}
+
+.Popover-blur {
+    font-weight: 500;
+    backdrop-filter: blur(2px);
 }
